# multiformats

./: .gitattributes  .pylintrc  .readthedocs.yaml  0.3.1  ADDITIONAL-LICENSES  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MULTIFORMATS-LICENSE  README.md  README.md.old  README.rst  SECURITY.md  autodoc_typehints.py  make-docs.bat  model.pylintrc  pypi-distrib-upload.bat  pyproject.toml  report.py  report.txt  run-scripts.bat  run-tests.bat  setup.cfg  setup.py  toctable  tox.ini  update-multibase-table.py  update-multicodec-table.py
.github/workflows/: python-pytest.yml
docs/: Makefile  api-toc.rst  autodoc-type-aliases.json  cid.rst  conf.py  getting-started.rst  implementation-report.rst  index.html  index.rst  make-api-clean-html.bat  make-api.json  make-api.py  make.bat  multiaddr.rst  multibase.rst  multicodec.rst  multihash.rst  requirements.txt  varint.rst
docs/api/: multiformats.cid.rst  multiformats.multiaddr.err.rst  multiformats.multiaddr.raw.rst  multiformats.multiaddr.rst  multiformats.multibase.err.rst  multiformats.multibase.raw.rst  multiformats.multibase.rst  multiformats.multicodec.err.rst  multiformats.multicodec.rst  multiformats.multihash._hashfuns.blake.rst  multiformats.multihash._hashfuns.filecoin.rst  multiformats.multihash._hashfuns.kangarootwelve.rst  multiformats.multihash._hashfuns.keccak.rst  multiformats.multihash._hashfuns.md.rst  multiformats.multihash._hashfuns.murmur3.rst  (+8 more)
multiformats/: __init__.py  cid.py  multibase.py  multicodec.py  varint.py
pdoc_templates/: css.mako
test/: multihash-test-hex-vectors.csv  multihash-test-str-vectors.csv  multihash-test-vectors.csv  test_00_varint.py  test_01_multicodec.py  test_02_multibase.py  test_03_multihash.py  test_04_cid.py  test_05_multiaddr.py
(+50 files in other folders)
