# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://packaging.python.org/en/latest/guides/distributing-packages-using-setuptools/#setup-cfg

[metadata]
name = multiformats
author = hashberg
author_email = sg495@users.noreply.github.com
description = Python implementation of multiformats protocols.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hashberg-io/multiformats
project_urls =
    Bug Tracker = https://github.com/hashberg-io/multiformats/issues
# see https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Natural Language :: English
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.7
install_requires =
    bases
    typing-extensions
    typing-validation
    pyskein

[options.package_data]
* = py.typed

[options.packages.find]
exclude = test

[options.extras_require]
dev =
    mypy
    pylint
    pytest
    pytest-cov
